<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242830"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/buscas_empleo"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Nombre -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/nombre"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focused_edittext"
            android:textColor="@android:color/white"
            android:textColorHint="#2c3434"
            android:hint="@string/tu_nombre_completo"
            android:textSize="14sp"
            android:padding="8dp"
            android:inputType="textPersonName" />

        <!-- Descripción -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/focused_edittext"
            android:textColor="@android:color/white"
            android:textColorHint="#2c3434"
            android:hint="@string/describe_tus_habilidades_y_experiencia"
            android:textSize="14sp"
            android:padding="8dp"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:scrollHorizontally="false" />

        <!-- Sector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sector"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spSector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <!-- Tipo de empleo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_empleo"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spTipoEmpleo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <!-- Experiencia -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Experiencia:"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spExperienciaBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <!-- Ubicación -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ubicación:"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp" />

        <Spinner
            android:id="@+id/spUbicacionBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <!-- Botón -->
        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_solicitud"
            android:backgroundTint="#f6c732"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
            android:padding="12dp" />
    </LinearLayout>
</ScrollView>
