<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="140dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="66dp"
        android:text="@string/te_damos_la_bienvenida_al_portal_de_empleo"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="352dp"
        android:backgroundTint="@color/black"
        android:text="@string/buscar_empleo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="438dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="266dp"
        android:backgroundTint="@color/black"
        android:text="@string/registrar_oferta_de_empleo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</androidx.constraintlayout.widget.ConstraintLayout>